# transfer_service

./: .gitignore
transfer_service/: CHANGES.txt  README.md  pyproject.toml  requirements.txt  run_rpi_service.sh
transfer_service/data/: standards.json
transfer_service/transfer_service/: transfer.py
transfer_service/transfer_service/client/: win_gui.py
transfer_service/transfer_service/docs/: NOTES.md
transfer_service/transfer_service/drivers/: dp320b.py  k2182.py  lte300.py  mock.py
transfer_service/transfer_service/examples/: example_request.json
transfer_service/transfer_service/io/: raw_csv.py  report_xlsx.py
transfer_service/transfer_service/math/: allan.py  ne_temp.py  stats.py  transfer_calc.py  uncertainty.py
transfer_service/transfer_service/sensors/: bme280_env.py
transfer_service/transfer_service/service/: server.py  standards_store.py
transfer_service/transfer_service/service/static/: app.js  styles.css
transfer_service/transfer_service/service/templates/: index.html
